--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -1,4 +1,4 @@
-<div class="m-dropdown" ref="mDropdown" :class="{ 'm--is-disabled': disabled, 'm--is-waiting': waiting }" :style="{ width: width }">
+<div class="m-dropdown" ref="mDropdown" :class="{ 'm--is-disabled': disabled, 'm--is-waiting': waiting }" :style="{ width: width, 'max-width': maxWidth }" @click="onClick">
     <m-popup :placement="bottom-start"
              :disabled="inactive"
              :open="propOpen"
@@ -6,58 +6,68 @@
              :after-enter="transitionAfterEnter"
              :leave="transitionLeave"
              :padding-header="false"
-             :open-on-click="!propOpen"
+             :open-on-click="false"
              :padding-body="false"
-             :focus-management="!propEditable"
+             :focus-management="false"
              width="100%"
              @open="toggleDropdown(true)"
              @close="toggleDropdown(false)">
-        <template slot="header" v-if="hasLabel && isMqMaxS">
-            <h2 class="m-dropdown__header__label">{{ label }}</h2>
-            <div class="m-dropdown__header__research" v-if="editable">
+        <div slot="header" v-show="isMqMaxS">
+            <h2 class="m-dropdown__header__label" v-if="hasLabel">{{ label }}</h2>
+            <div class="m-dropdown__header__research" v-if="propEditable">
                 <input type="text"
                        class="m-dropdown__header__research-input"
-                       :placeholder="researchText"
-                       v-model="textElement"
-                       ref="researchInput">
-                <m-button mode="icon" icon-name="default" @click="focusOnResearchInput">
+                       placeholder="Recherche"
+                       ref="researchInput"
+                       v-model="selectedValue"
+                       @change="filterDropdown"
+                       @keyup="onKeyup">
+                <m-button mode="icon" icon-name="search" @click="focusOnResearchInput">
                     <m-i18n k="m-dropdown:search"></m-i18n>
                 </m-button>
             </div>
-        </template>
+        </div>
         <ul class="m-dropdown__list"
             ref="mDropdownElements"
             slot="body"
-            tabindex="1"
             @keyup="keyupItem">
             <slot></slot>
             <m-dropdown-item v-show="noItems" :no-data-default-item="true">{{ noItemsLabel }}</m-dropdown-item>
         </ul>
 
-        <div slot="header" v-if="!isMqMinS && propEditable">
-            <input type="text" @change="filterDropdown($event)" @keyup="keyupReference" v-model="selectedText">
-        </div>
+        <!-- <div slot="header" v-if="!isMqMinS && propEditable">
+            <input type="text"
+                   @change="filterDropdown"
+                   @keyup="onKeyup"
+                   v-model="selectedValue">
+        </div> -->
         <m-input-style ref="mDropdownValue"
                       :label="label"
                       :state="propState"
+                      :empty="emptyValue"
                       :focus="propOpen"
                       :placeholder="defaultText"
                       :disabled="disabled"
-                      :waiting="waiting"
-                      :style="{ width: width }">
-            <input type="text" @focus="onFocus" @blur="onBlur" @change="filterDropdown($event)" @keyup="keyupReference" v-model="selectedText" v-if="propEditable">
-            <div v-if="!propEditable">{{ selectedText }}</div>
-            <m-button slot="right-content" mode="icon" icon-name="dropdown-arrow" class="m-dropdown__arrow" :class="{ 'm--is-open': propOpen }">
-                Open dropdown
-            </m-button>
+                      :waiting="waiting">
+            <input type="text"
+                   ref="input"
+                   @focus="onFocus"
+                   @change="filterDropdown"
+                   @keyup="onKeyup"
+                   v-model="selectedValue"
+                   v-if="propEditable"
+                   :disabled="isDisabled">
+            <template v-if="!propEditable">
+                <div v-if="!emptyValue" ref="input">{{ selectedValue }}</div>
+                <div v-if="emptyValue" ref="input">Aucune sélection</div>
+            </template>
+            <div class="m-dropdown__arrow" :class="{ 'm--is-open': propOpen }" slot="right-content">
+                <m-button mode="icon" icon-name="dropdown-arrow" @click="arrowOnClick($event)">Open dropdown</m-button>
+            </div>
         </m-input-style>
         <template slot="footer" v-if="hasFooterSlot">
             <slot name="footer"></slot>
         </template>
     </m-popup>
-    <m-validation-message
-        :error-message="propErrorMessage"
-        :valid-message="propValidMessage"
-        :helper-message="helperMessage"
-        v-if="!isDisabled"></m-validation-message>
+    <m-validation-message :error-message="errorMessage" :valid-message="validMessage" :helper-message="helperMessage" v-if="!isDisabled"></m-validation-message>
 </div>
