--- a/src/components/popup/popup.html
+++ b/src/components/popup/popup.html
@@ -28,7 +28,7 @@
         </div>
     </m-popper>
     <m-sidebar :open="propOpen" @open="togglePopup(true)" @close="togglePopup(false)" :disabled="disabled" :id="id" :classNamePortalTarget="classNamePortalTarget"
-        :padding="padding" :padding-header="paddingHeader" :padding-body="paddingBody" :padding-footer="paddingFooter" v-if="isMqMaxS">
+        :padding="padding" :padding-header="paddingHeader" :padding-body="paddingBody" :padding-footer="paddingFooter" v-if="isMqMaxS" :style="{ width: width }">
         <slot></slot>
         <div slot="header" class="m-popup__header" v-if="hasHeaderSlot">
             <slot name="header"></slot>
