--- a/src/styles/abstracts/_var-color.scss
+++ b/src/styles/abstracts/_var-color.scss
@@ -82,5 +82,10 @@ $m-color--active-lightest: $m-color--warning-lightest !default;
 // ======================================================================
 //  Scrollbar colors
 // ======================================================================
-$m-color--scrollbar: $m-color--grey;
-$m-color--scrollbar--light: $m-color--grey-lighter;
+$m-color--scrollbar: $m-color--grey !default;
+$m-color--scrollbar--light: $m-color--grey-lighter !default;
+
+// ======================================================================
+//  Disabled colors
+// ======================================================================
+$m-color--disabled: $m-color--grey-dark !default;
