--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -17,7 +17,7 @@ $m-dropdown--margin: $m-padding--xs !default;
             font-size: $m-font-size--s;
             font-weight: $m-font-weight--bold;
             color: $m-color--white;
-            background: $m-color--black-grey;
+            background: $m-color--interactive;
         }
 
         &__research {
