--- a/src/components/dropdown-item/dropdown-item.scss
+++ b/src/components/dropdown-item/dropdown-item.scss
@@ -17,37 +17,39 @@ $m-dropdown-item--color-active: $m-color--interactive-lightest !default;
 
     @include m-word-wrap();
 
-    &:not(.m--is-disabled) {
-        &:not(.m--is-inactif) {
-            &:not(.m--is-selected) {
-                cursor: pointer;
+    @media (min-width: $m-bp--min--s) {
+        &:not(.m--is-disabled) {
+            &:not(.m--is-inactif) {
+                &:not(.m--is-selected) {
+                    cursor: pointer;
 
-                &:hover {
-                    background: $m-dropdown-item--color-hover;
-                }
+                    &:hover {
+                        background: $m-dropdown-item--color-hover;
+                    }
 
-                &:focus {
-                    background: $m-dropdown-item--color-focus;
-                }
+                    &:focus {
+                        background: $m-dropdown-item--color-focus;
+                    }
 
-                &:active {
-                    background: $m-dropdown-item--color-active;
+                    &:active {
+                        background: $m-dropdown-item--color-active;
+                    }
                 }
             }
         }
-    }
 
-    &.m--is-disabled {
-        cursor: not-allowed;
-        color: $m-color--grey;
-    }
+        &.m--is-disabled {
+            cursor: not-allowed;
+            color: $m-color--grey;
+        }
 
-    &.m--is-selected {
-        background: $m-dropdown-item--color-select;
-
-        .m-dropdown__list__element-text {
-            cursor: default;
+        &.m--is-selected {
             background: $m-dropdown-item--color-select;
+
+            .m-dropdown__list__element-text {
+                cursor: default;
+                background: $m-dropdown-item--color-select;
+            }
         }
     }
 }
