--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -1,9 +1,9 @@
 @import 'abstracts/variables';
-$m-input-style--color-default-text: $m-color--grey-darker !default;
+$m-input-style--color-default-text: $m-color--disabled !default;
 $m-input-style--color-focus: $m-color--interactive !default;
 $m-input-style--color-error: $m-color--error !default;
 $m-input-style--color-valid: $m-color--success !default;
-$m-input-style--color-disabled: $m-color--grey-darker !default;
+$m-input-style--color-disabled: $m-color--disabled !default;
 $m-input-style--color-waiting: $m-color--active !default;
 $m-input-style--padding: 5px !default;
 
