--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -49,6 +49,20 @@ $m-dropdown--margin: $m-padding--xs !default;
         text-align: left;
         background: $m-color--white;
 
+        @include m-scrollbar-ie();
+
+        &::-webkit-scrollbar {
+            @include m-scrollbar();
+
+            &-track-piece {
+                @include m-scrollbar-track-piece();
+            }
+
+            &-thumb {
+                @include m-scrollbar-thumb();
+            }
+        }
+
         &.m--is-hidden {
             position: absolute;
             visibility: hidden;
