keyboard and focus management

--- a/src/components/text-field/text-field.html
+++ b/src/components/text-field/text-field.html
@@ -18,6 +18,8 @@
             @focus="onFocus"
             @blur="onBlur"
             @keydown="onKeydown"
+            @click="onClick"
+            @mousedown="onMousedown"
             :placeholder="propPlaceholder"
             v-model="model"
             v-if="true"
