--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -11,8 +11,7 @@
              :open-on-click="false"
              width="100%"
              ref="popper"
-             @open="toggleDropdown(true)"
-             @close="toggleDropdown(false)">
+             @open="onOpen">
         <!-- <template slot="header" v-if="hasLabel && isMqMaxS">
             <h2 class="m-dropdown__header__label">{{ label }}</h2>
             <div class="m-dropdown__header__research" v-if="editable">
@@ -52,7 +51,7 @@
                       @keydown.prevent="onKeydown"
                       @focus="onFocus($event)"
                       @blur="onBlur($event)"
-                      @dropdownToggle="onDropdownToggle()">
+                      @mousedown="onMousedown($event)">
         </m-text-field>
         <!-- <m-button mode="icon" icon-name="default" icon-size="13px" class="m-dropdown__icon-clear" v-if="this.hasModel &&!disabled && !waiting" @click="clearField">Clear field</m-button> -->
     </m-popup>
