--- a/src/components/dropdown-item/dropdown-item.scss
+++ b/src/components/dropdown-item/dropdown-item.scss
@@ -1,8 +1,7 @@
 @import 'abstracts/variables';
-$m-dropdown-item--color-hover: $m-color--grey-lightest !default;
+$m-dropdown-item--color-hover: $m-color--interactive-lightest !default;
 $m-dropdown-item--color-select: $m-color--grey-light !default;
-$m-dropdown-item--color-focus: $m-color--interactive-lightest !default;
-$m-dropdown-item--color-active: $m-color--interactive-lightest !default;
+$m-dropdown-item--color-active: $m-color--grey-lightest !default;
 
 .m-dropdown-item {
     transition: background $m-transition-duration ease;
@@ -23,12 +22,10 @@ $m-dropdown-item--color-active: $m-color--interactive-lightest !default;
                 &:not(.m--is-selected) {
                     cursor: pointer;
 
-                    &:hover {
+                    &:hover,
+                    &:focus,
+                    &.m--is-focus {
                         background: $m-dropdown-item--color-hover;
-                    }
-
-                    &:focus {
-                        background: $m-dropdown-item--color-focus;
                     }
 
                     &:active {
