--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -48,7 +48,13 @@
                       :error-message="errorMessage"
                       :valid-message="validMessage"
                       :helper-message="helperMessage"
-                      @keydown.prevent="onKeydown"
+                      @keydown.native.enter.prevent="onKeydown($event)"
+                      @keydown.native.return.prevent="onKeydown($event)"
+                      @keydown.native.space.prevent="onKeydown($event)"
+                      @keydown.native.esc.prevent="onKeydown($event)"
+                      @keydown.native.up.prevent="onKeydown($event)"
+                      @keydown.native.down.prevent="onKeydown($event)"
+                      @keydown="onKeydown2($event)"
                       @focus="onFocus($event)"
                       @blur="onBlur($event)"
                       @mousedown="onMousedown($event)">
