--- a/src/components/flex-template/flex-template.scss
+++ b/src/components/flex-template/flex-template.scss
@@ -151,6 +151,7 @@
         }
 
         &__body {
+            height: 100%;
             > :first-child {
                 flex: 1 1 auto;
             }
