--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -48,13 +48,12 @@
                       :error-message="errorMessage"
                       :valid-message="validMessage"
                       :helper-message="helperMessage"
-                      @keydown.native.enter.prevent="onKeydown($event)"
-                      @keydown.native.return.prevent="onKeydown($event)"
-                      @keydown.native.space.prevent="onKeydown($event)"
-                      @keydown.native.esc.prevent="onKeydown($event)"
-                      @keydown.native.up.prevent="onKeydown($event)"
-                      @keydown.native.down.prevent="onKeydown($event)"
-                      @keydown="onKeydown2($event)"
+                      @keydown.native.enter.prevent="onKeydownEnter($event)"
+                      @keydown.native.return.prevent="onKeydownEnter($event)"
+                      @keydown.native.esc.prevent="onKeydownEscape($event)"
+                      @keydown.native.up.prevent="onKeydownUp($event)"
+                      @keydown.native.down.prevent="onKeydownDown($event)"
+                      @keydown="onKeydown($event)"
                       @focus="onFocus($event)"
                       @blur="onBlur($event)"
                       @mousedown="onMousedown($event)">
