--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -60,8 +60,8 @@
         </m-text-field>
         <!-- <m-button mode="icon" icon-name="default" icon-size="13px" class="m-dropdown__icon-clear" v-if="this.hasModel &&!disabled && !waiting" @click="clearField">Clear field</m-button> -->
     </m-popup>
-    <m-validation-message
+    <!-- <m-validation-message
         :error-message="propErrorMessage"
         :valid-message="propValidMessage"
-        :helper-message="helperMessage"></m-validation-message>
+        :helper-message="helperMessage"></m-validation-message> -->
 </div>
