--- a/src/components/dropdown-item/dropdown-item.html
+++ b/src/components/dropdown-item/dropdown-item.html
@@ -1,7 +1,7 @@
 <li class="m-dropdown-item"
-    :class="{ 'm--is-selected': selected, 'm--is-disabled': disabled, 'm--is-inactif': inactif, 'm--is-focus': focused }"
+    :class="{ 'm--is-selected': selected, 'm--is-disabled': disabled, 'm--is-inactive': inactive, 'm--is-focus': focused }"
     :disabled="disabled"
-    v-if="visible"
+    v-if="!filtered || inactive"
     @mousedown.prevent="onMousedown($event)">
     <slot><span class="m-dropdown-item__element-text">{{ propLabel }}</span></slot>
 </li>
