dropdown scroll to focused item

--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -49,11 +49,11 @@
                       :error-message="errorMessage"
                       :valid-message="validMessage"
                       :helper-message="helperMessage"
-                      @keydown.native.enter.prevent="onKeydownEnter($event)"
-                      @keydown.native.return.prevent="onKeydownEnter($event)"
-                      @keydown.native.esc.prevent="onKeydownEscape($event)"
-                      @keydown.native.up.prevent="onKeydownUp($event)"
-                      @keydown.native.down.prevent="onKeydownDown($event)"
+                      @keydown.enter.prevent="onKeydownEnter($event)"
+                      @keydown.return.prevent="onKeydownEnter($event)"
+                      @keydown.esc.prevent="onKeydownEscape($event)"
+                      @keydown.up.prevent="onKeydownUp($event)"
+                      @keydown.down.prevent="onKeydownDown($event)"
                       @keydown="onKeydown($event)"
                       @focus="onFocus($event)"
                       @blur="onBlur($event)"
