--- a/src/components/link/link.html
+++ b/src/components/link/link.html
@@ -1,27 +1,29 @@
-
 <transition>
-    <router-link class="m-link"
-                 :class="{ 'm--is-unvisited': unvisited,
+    <router-link class="m-link" :class="{ 'm--is-unvisited': unvisited,
                            'm--no-underline': !underline,
                            'm--is-button': isButton,
                            'm--is-vanilla': vanilla,
-                           'm--has-right-icon' : isIconPositionRight }"
-                 :to="{ path: propUrl }"
-                 v-if="isRouterLink">
-        <m-icon :name="iconName" class="m-link__icon" v-if="hasIcon" aria-hidden="true"></m-icon><span  class="m-link__text"><slot>{{ componentName }}</slot></span>
+                           'm--has-right-icon' : isIconPositionRight }" :to="{ path: propUrl }" v-if="isRouterLink">
+
+        <m-icon :name="iconName" :style="{ fontSize: iconSize }" class="m-link__icon" v-if="hasIcon" aria-hidden="true"></m-icon>
+
+        <span class="m-link__text">
+            <slot>{{ componentName }}</slot>
+        </span>
         <span class="m-link__hidden" v-if="hasHiddenText">{{ hiddenText }}</span>
     </router-link>
-    <a class="m-link"
-       :class="{ 'm--is-unvisited': unvisited,
+    <a class="m-link" :class="{ 'm--is-unvisited': unvisited,
                  'm--no-underline': !underline,
                  'm--is-button': isButton,
                  'm--is-vanilla': vanilla,
-                 'm--has-right-icon' : isIconPositionRight }"
-       :href="propUrl"
-       v-if="isLink || isExternalLink || isButton"
-       ref="link"
-       @click="onClick">
-        <m-icon :name="iconName" class="m-link__icon" v-if="hasIcon" aria-hidden="true"></m-icon><span  class="m-link__text"><slot>{{ componentName }}</slot></span>
+                 'm--has-right-icon' : isIconPositionRight }" :href="propUrl" v-if="isLink || isExternalLink || isButton"
+        ref="link" @click="onClick">
+
+        <m-icon :style="{ fontSize: iconSize }" :name="iconName" class="m-link__icon" v-if="hasIcon" aria-hidden="true"></m-icon>
+
+        <span class="m-link__text">
+            <slot>{{ componentName }}</slot>
+        </span>
         <span class="m-link__hidden" v-if="hasHiddenText">{{ hiddenText }}</span>
     </a>
 </transition>
