--- a/src/components/popup/popup.html
+++ b/src/components/popup/popup.html
@@ -1,14 +1,14 @@
 <div class="m-popup" :id="id" :style="{ width: width }">
-    <m-popper :open="propOpen"
-              @open="togglePopup(true)"
-              @close="togglePopup(false)"
+    <m-popper :open.sync="propOpen"
+              @open="onOpen()"
+              @close="onClose()"
               :disabled="disabled"
               :id="id"
               :classNamePortalTarget="classNamePortalTarget"
               :placement="placement"
               :focus-management="focusManagement"
-              :open-on-click="openOnClick"
-              :open-on-Over="openOnOver"
+              :open-trigger="openTrigger"
+              :trigger="trigger"
               :before-enter="beforeEnter"
               :enter="enter"
               :after-enter="afterEnter"
@@ -19,21 +19,23 @@
               :leave-cancelled="leaveCancelled"
               v-if="!isSmall || desktopOnly"
               :style="{ width: width }">
-        <slot></slot>
-        <div slot="body" class="m-popup__body" :class="{ 'm--has-shadow': shadow }" v-if="hasHeaderSlot || hasBodySlot || hasFooterSlot">
+        <div slot="trigger" v-if="hasTriggerSlot">
+            <slot name="trigger"></slot>
+        </div>
+        <div class="m-popup__body" :class="{ 'm--has-shadow': shadow }" v-if="hasHeaderSlot || hasBodySlot || hasFooterSlot">
             <slot name="header"></slot>
-            <slot name="body"></slot>
+            <slot></slot>
             <slot name="footer"></slot>
         </div>
     </m-popper>
     <m-sidebar :open="propOpen" @open="togglePopup(true)" @close="togglePopup(false)" :disabled="disabled" :id="id" :classNamePortalTarget="classNamePortalTarget"
         :padding="padding" :padding-header="paddingHeader" :padding-body="paddingBody" :padding-footer="paddingFooter" v-if="isSmall && !desktopOnly">
-        <slot></slot>
+        <slot name="trigger"></slot>
         <div slot="header" class="m-popup__header" v-if="hasHeaderSlot">
             <slot name="header"></slot>
         </div>
         <div slot="body" class="m-popup__body" v-if="hasBodySlot">
-            <slot name="body"></slot>
+            <slot></slot>
         </div>
         <div slot="footer" class="m-popup__footer" v-if="hasFooterSlot">
             <slot name="footer"></slot>
