--- a/src/components/popper/popper.html
+++ b/src/components/popper/popper.html
@@ -1,8 +1,15 @@
 <div class="m-popper" :class="{ 'm--is-open': propOpen }">
     <slot name="trigger"></slot>
     <portal :target-el="'#' + propId" v-if="hasBodySlot">
-        <transition @before-enter="onBeforeEnter" @enter="onEnter" @after-enter="onAfterEnter" @enter-cancelled="onEnterCancelled"
-            @before-leave="onAfterLeave" @leave="onLeave" @after-leave="onAfterLeave" @leave-cancelled="onLeaveCancelled">
+        <transition
+            @before-enter="onBeforeEnter"
+            @enter="onEnter"
+            @after-enter="onAfterEnter"
+            @enter-cancelled="onEnterCancelled"
+            @before-leave="onAfterLeave"
+            @leave="onLeave"
+            @after-leave="onAfterLeave"
+            @leave-cancelled="onLeaveCancelled">
             <article class="m-popper__article" :class="[{ 'm--is-default-anim': defaultAnim, 'm--is-open': defaultAnimOpen }, 'm--is-placement-' + placement ]"
                 ref="popper" :aria-hidden="!propOpen" v-show="propOpen">
                 <slot></slot>
