--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -34,8 +34,7 @@
              open-trigger="manual"
              width="100%"
              ref="popper"
-             @open="onOpen"
-             :desktop-only="true">
+             @open="onOpen">
         <!-- <template slot="header" v-if="hasLabel && isMqMaxS">
             <h2 class="m-dropdown__header__label">{{ label }}</h2>
             <div class="m-dropdown__header__research" v-if="editable">
