--- a/src/components/popup/popup.html
+++ b/src/components/popup/popup.html
@@ -4,7 +4,6 @@
               @close="onClose()"
               :disabled="disabled"
               :id="id"
-              :classNamePortalTarget="classNamePortalTarget"
               :placement="placement"
               :focus-management="focusManagement"
               :open-trigger="openTrigger"
@@ -22,19 +21,26 @@
         <div slot="trigger" v-if="hasTriggerSlot">
             <slot name="trigger"></slot>
         </div>
-        <div class="m-popup__body" :class="{ 'm--has-shadow': shadow }" v-if="hasHeaderSlot || hasBodySlot || hasFooterSlot">
-            <slot name="header"></slot>
+        <div class="m-popup__body" :class="{ 'm--has-shadow': shadow }">
             <slot></slot>
-            <slot name="footer"></slot>
         </div>
     </m-popper>
-    <m-sidebar :open="propOpen" @open="togglePopup(true)" @close="togglePopup(false)" :disabled="disabled" :id="id" :classNamePortalTarget="classNamePortalTarget"
-        :padding="padding" :padding-header="paddingHeader" :padding-body="paddingBody" :padding-footer="paddingFooter" v-if="isSmall && !desktopOnly">
+    <m-sidebar :open="propOpen"
+               @open="onOpen()"
+               @close="onClose()"
+               :disabled="disabled"
+               :id="id"
+               :padding="padding"
+               :padding-header="paddingHeader"
+               :padding-body="paddingBody"
+               :padding-footer="paddingFooter"
+               :trigger="trigger"
+               v-if="isSmall && !desktopOnly">
         <slot name="trigger"></slot>
         <div slot="header" class="m-popup__header" v-if="hasHeaderSlot">
             <slot name="header"></slot>
         </div>
-        <div slot="body" class="m-popup__body" v-if="hasBodySlot">
+        <div slot="body" class="m-popup__body" v-if="hasDefaultSlot">
             <slot></slot>
         </div>
         <div slot="footer" class="m-popup__footer" v-if="hasFooterSlot">
